oxiplate-derive/tests/broken/numbers/bad-octal.stderr
error: Expected an expression.
 --> tests/broken/numbers/bad-octal.rs:4:23
  |
4 | #[oxiplate_inline("{{ 0o }}")]
  |                       ^^^^^
